[package]
name = "stellar-quorum-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6.5"
stellar-xdr = "=22.0.0"
json = "0.12.4"
itertools = "*"

[dependencies.batsat]
version = "0.5.0"
git = "https://github.com/c-cube/batsat.git"
rev = "6cc3b2eb2d9585e6ee7743a414b816acf2a07056"

[dev-dependencies]
varisat = "=0.2.2"
screwsat = "=2.1.5"
splr = "=0.17.2"
prettytable = "0.10.0"
dimacs = "0.2.0"

[[bench]]
harness = false
bench = true
name = "solver_comparison"
path = "benches/solver_comparison.rs"
